--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: dart_commons
-description: A starting point for Dart libraries or applications.
-# version: 0.0.1
-# author: asherbar <asherbare@gmail.com>
+description: A collection of boilerplate snippets in Dart.
+version: 0.0.1
+author: asherbar <asherbare@gmail.com>
+homepage: https://github.com/asherbar/dart_commons
 
 environment:
   sdk: '>=2.5.0 <3.0.0'
