--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: dart_commons
+name: dartboard
 description: A collection of boilerplate snippets in Dart.
 version: 0.0.1
 author: asherbar <asherbare@gmail.com>
-homepage: https://github.com/asherbar/dart_commons
+homepage: https://github.com/asherbar/dartboard
 
 environment:
   sdk: '>=2.5.0 <3.0.0'
